--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,21 @@
 div{
 
-    height: 250px;
-    width: 250px;
+    height: 200px;
+    width: 200px;
     border: 20px solid;
     margin: 30px;
-    color: rgb(21, 85, 85);
+    color: rgb(11, 48, 48);
     float: right;
+}
+.box1{
+    background-color: antiquewhite;
+}
+.box2{
+    background-color: rgb(239, 243, 8);
+}
+.box3{
+    background-color: rgb(252, 148, 13);
+}
+.box4{
+    background-color: rgb(16, 130, 206);
 }
