--- a/css/layout.css
+++ b/css/layout.css
@@ -15,22 +15,26 @@ margin: auto;
  header {
     background-color: rgb(112, 96, 71);
     height: 100px;
+    border: 2px solid black;
  }
  .header {
     background-color: rgb(103, 180, 180);
     padding: 30px;
+    border: 2px solid black;
  }
 
  #box1 {
     float: left;
     width: 25%;
     margin: 10px 0 0 10px;
+    border: 2px solid black;
 }
 
 #box2 {
     float: right;
     width: 65%;
     margin: 10px 10px 0 0;
+    border: 2px solid black;
 }
 
 
@@ -38,15 +42,17 @@ margin: auto;
 .main {
     height: 400px;
     margin: auto;
+    border: 2px solid black;
 }
 
 #sec-1 {
     background-color: rgb(5, 163, 108);
-    margin: 20px;
+    margin: 10px;
     width: 45%;
     height: 90%;
     float: left;
     padding-top: 10px;
+    border: 2px solid black;
 
 }
 #sec2{
@@ -56,6 +62,7 @@ margin: auto;
     height: 90%;
     float: right;
     padding-top: 10px;
+    border: 2px solid black;
    
     
 
@@ -66,6 +73,7 @@ margin: auto;
     height: 70px;
     padding-top: 25px; 
     width: 95%;
+    border: 2px solid black;
 
 }
 #sec-Bottom {
@@ -73,6 +81,8 @@ margin: auto;
     height: 250px;
     width: 95%;
     background-color: rgb(108, 153, 4);
+    border: 2px solid black;
+    padding: 20px;
 }
 
  
@@ -80,12 +90,14 @@ margin: auto;
     height: 350px;
     background-color: rgb(73, 33, 33);
     padding: auto;
+    border: 2px solid black;
 }
 
 img{
     height:250px;
     width: 250px;
     margin: 20px;
+    border: 2px solid black;
     
 }
 
@@ -93,7 +105,8 @@ img{
      height: 250px;
      width: 250px;
      float: left;
-     margin: 70px;
+     margin: 60px;
+     border: 2px solid black;
 
 }
 
@@ -104,29 +117,33 @@ img{
     background-color:rgb(40, 40, 90) ;
     float:right;
     margin: 60px;
+    border: 2px solid black;
 }
 .footer{
     background-color:rgb(163, 120, 11) ;
     height: 250px;
     padding:0 20px ;
+    border: 2px solid black;
+    margin: 10px;
 
 }
+
 .footer div{
     background-color: grey;
     float: left;
     height:200px ;
     width:250px ;
     margin: 20px;
-    /* padding-top: 90px; */
+    border: 2px solid black;
 }
-/* 
-.footer div2{
+
+ .footer div2{
     background-color: grey;
     float: left;
     height:200px ;
     width:250px ;
     margin: 20px;
-    padding-top: 90px;
+    border: 2px solid black;
 }
 
 .footer div3{
@@ -135,5 +152,5 @@ img{
     height:200px ;
     width:250px ;
     margin: 20px;
-    padding-top: 90px;
-} */
+    border: 2px solid black;
+} 
